# CUB3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  cub3  cub3.c  cub3.h  cub3D  map.cub  maps.txt
bonus/: Makefile  cub3.c  cub3.h  cub3D  cub3_bonus.c  cub3_bonus.h  map.cub
bonus/config/: check_map.c  parse.c  textures.c
bonus/config_bonus/: FC.c  check.c  check_map.c  fill_map.c  free.c  init.c  is_valid.c  map_lines.c  parse.c  print.c  read_map.c  textures.c  utils.c
bonus/getnextline/: get_next_line.h
bonus/getnextline_bonus/: get_next_line.h  get_next_line_utils.c
bonus/lib/: ft_split.c  skip_space.c
bonus/lib_bonus/: ft_atoi.c  ft_isdigit.c  ft_split.c  ft_strdup.c  ft_strlen.c  ft_substr.c  lib.h  skip_space.c  substring.c  subtring2.c  trime.c
bonus/raycasting/: keys.c  raycast.c  texture.c  utils.c
bonus/raycasting_bonus/: animation.c  cast_ray.c  doors.c  init.c  keys.c  raycast.c  renders.c  tex_util.c  tex_util2.c  tex_utils.c  texture.c  utils.c  utils2.c
config/: FC.c  check.c  check_map.c  fill_map.c  free.c  init.c  is_valid.c  map_lines.c  parse.c  print.c  read_map.c  textures.c  utils.c
getnextline/: get_next_line.h
lib/: ft_atoi.c  ft_isdigit.c  ft_putstr.c  ft_split.c  ft_strdup.c  ft_strlen.c  ft_substr.c  lib.h  skip_space.c  substring.c  subtring2.c  trime.c
mandatory/: cub3.c  cub3.h
mandatory/config/: FC.c  check.c  check_map.c  init.c  parse.c  print.c
mandatory/getnextline/: get_next_line.c
mandatory/lib/: ft_isdigit.c  ft_putstr.c  ft_substr.c  subtring2.c
mandatory/raycasting/: cast_ray.c  init.c  keys.c  raycast.c  tex_utils.c  utils2.c
maps/: map_bonus.cub
raycasting/: animation.c  cast_ray.c  drawing.c  init.c  keys.c  raycast.c  raycast_v2.c  renders.c  tex_util.c  tex_utils.c  texture.c  utils.c  utils2.c
